# UltimateCore

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cc
headers/: core.h  module.h  modulemetadata.h  requestcodes.h  virtualfs.h
src/: core.cc  module.cc  virtualfs.cc
